Bug 199771 - soft fail if gdi+ or cairo can't be found/used. r=scooter, sr=bryner