layout/build/nsLayoutModule.cpp
@@ -205,6 +205,7 @@ static void Shutdown();
 #include "nsSVGTypeCIDs.h"
 #include "nsISVGRenderer.h"
 #include "nsSVGRect.h"
+
 #ifdef MOZ_SVG_RENDERER_LIBART
 void NS_InitSVGRendererLibartGlobals();
 void NS_FreeSVGRendererLibartGlobals();
@@ -212,10 +213,6 @@ void NS_FreeSVGRendererLibartGlobals();
 #ifdef MOZ_SVG_RENDERER_GDIPLUS
 void NS_InitSVGRendererGDIPlusGlobals();
 void NS_FreeSVGRendererGDIPlusGlobals();
-#endif
-#ifdef MOZ_SVG_RENDERER_CAIRO
-void NS_InitSVGRendererCairoGlobals();
-void NS_FreeSVGRendererCairoGlobals();
 #endif
 #endif
 
@@ -317,9 +314,6 @@ Initialize(nsIModule* aSelf)
 #ifdef MOZ_SVG_RENDERER_GDIPLUS
   NS_InitSVGRendererGDIPlusGlobals();
 #endif
-#ifdef MOZ_SVG_RENDERER_CAIRO
-  NS_InitSVGRendererCairoGlobals();
-#endif
 #endif
 
 #ifdef DEBUG
@@ -405,9 +399,6 @@ Shutdown()
 #ifdef MOZ_SVG_RENDERER_GDIPLUS
   NS_FreeSVGRendererGDIPlusGlobals();
 #endif
-#ifdef MOZ_SVG_RENDERER_CAIRO
-  NS_FreeSVGRendererCairoGlobals();
-#endif
 #endif
 
   nsCSSFrameConstructor::ReleaseGlobals();
@@ -486,9 +477,6 @@ nsresult NS_NewSVGRendererGDIPlus(nsISVGRenderer** aResult);
 #ifdef MOZ_SVG_RENDERER_LIBART
 nsresult NS_NewSVGRendererLibart(nsISVGRenderer** aResult);
 #endif // MOZ_SVG_RENDERER_LIBART
-#ifdef MOZ_SVG_RENDERER_CAIRO
-nsresult NS_NewSVGRendererCairo(nsISVGRenderer** aResult);
-#endif // MOZ_SVG_RENDERER_CAIRO
 #endif
 
 #define MAKE_CTOR(ctor_, iface_, func_)                   \
@@ -537,9 +525,6 @@ MAKE_CTOR(CreateNewSVGRendererGDIPlus,  nsISVGRenderer,         NS_NewSVGRendere
 #ifdef MOZ_SVG_RENDERER_LIBART
 MAKE_CTOR(CreateNewSVGRendererLibart,   nsISVGRenderer,         NS_NewSVGRendererLibart)
 #endif // MOZ_SVG_RENDERER_LIBART
-#ifdef MOZ_SVG_RENDERER_CAIRO
-MAKE_CTOR(CreateNewSVGRendererCairo,    nsISVGRenderer,         NS_NewSVGRendererCairo)
-#endif // MOZ_SVG_RENDERER_CAIRO
 #endif
 MAKE_CTOR(CreateCaret,                  nsICaret,               NS_NewCaret)
 
@@ -799,12 +784,6 @@ static const nsModuleComponentInfo gComponents[] = {
     NS_SVG_RENDERER_LIBART_CONTRACTID,
     CreateNewSVGRendererLibart },
 #endif // MOZ_SVG_RENDERER_LIBART
-#ifdef MOZ_SVG_RENDERER_CAIRO
-  { "SVG Cairo Renderer",
-    NS_SVG_RENDERER_CAIRO_CID,
-    NS_SVG_RENDERER_CAIRO_CONTRACTID,
-    CreateNewSVGRendererCairo },
-#endif // MOZ_SVG_RENDERER_CAIRO
 #endif // MOZ_SVG
 
 #ifdef DEBUG
