allmakefiles.sh
@@ -1291,6 +1291,7 @@ if [ "$MOZ_SVG" ]; then
 	layout/svg/renderer/public/Makefile
 	layout/svg/renderer/src/Makefile
 	layout/svg/renderer/src/gdiplus/Makefile
+	layout/svg/renderer/src/gdiplusshim/Makefile
 	layout/svg/renderer/src/libart/Makefile
 	layout/svg/renderer/src/cairo/Makefile
 "
